proposal of project

--- a/OpenU_Data_Science_project.ipynb
+++ b/OpenU_Data_Science_project.ipynb
@@ -293,57 +293,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QaVE2LdPjrbM",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "707148a4-f2c3-4ef9-ffe8-681307e0e426"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive', force_remount=True)"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M-Zo4Yb1qA12",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Loading the dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UBQdJdqwqJ5C",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import shutil\n",
-        "import os\n",
-        "shutil.unpack_archive('/content/gdrive/My Drive/Datasets/UTKFace-clean.zip', '/tmp/UTKFace_dataset_clean')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "wRH-HlXRrAUM",
@@ -389,7 +338,7 @@
         "print(\"Example for a file name:\", files[0])\n",
         "print(\"Total samples:\", size)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,6 +406,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "wuv5pEM7gdce",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Wrong label examples**\n",
+        "\n",
+        "\n",
+        "<img src=\"https://i.ibb.co/2dyWG9k/dataset-wrong-labels.png\" alt=\"dataset-wrong-labels\" border=\"0\">"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "gLEKIDDsvdNs",
         "colab_type": "text"
       },
@@ -491,7 +453,7 @@
         "print(\"Max age:\",max(ages))\n",
         "print(\"Min age:\",min(ages))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,7 +522,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -621,7 +583,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -810,16 +772,16 @@
       "metadata": {
         "id": "gjHZM8vHz6Qz",
         "colab_type": "code",
+        "outputId": "f6e49140-31d5-4bb5-97d1-2cb23307e5c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 585
-        },
-        "outputId": "f6e49140-31d5-4bb5-97d1-2cb23307e5c6"
+        }
       },
       "source": [
         "data.show_batch(rows = 4, figsize = (8,8))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -850,7 +812,7 @@
       "source": [
         "data.classes"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,7 +869,7 @@
       "source": [
         "age_learner = fav.cnn_learner(data, fav.models.resnet34, metrics = fav.accuracy)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,7 +927,7 @@
       "source": [
         "age_learner.fit_one_cycle(5)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1081,7 +1043,7 @@
         "age_learner.unfreeze()\n",
         "age_learner.lr_find()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1168,7 +1130,7 @@
       "source": [
         "age_learner.recorder.plot()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1209,7 +1171,7 @@
       "source": [
         "age_learner.fit_one_cycle(5, slice(((1e-6) / 2), (1e-6)))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1301,7 +1263,7 @@
         "interp = fastai.vision.ClassificationInterpretation.from_learner(age_learner)\n",
         "interp.plot_top_losses(9, figsize=(15,11))"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1356,7 +1318,7 @@
       "source": [
         "interp.plot_confusion_matrix(figsize=(12,12), dpi=60)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1387,7 +1349,7 @@
       "source": [
         "interp.most_confused()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1557,7 +1519,7 @@
       "source": [
         "data.show_batch(rows = 4, figsize=(8,8))"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1611,7 +1573,7 @@
       "source": [
         "gender_learner.fit_one_cycle(5)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1714,17 +1676,17 @@
       "metadata": {
         "id": "zt5aAc4-SWW8",
         "colab_type": "code",
+        "outputId": "688c5c2c-392b-4041-a8cc-64ca4d64d47b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        },
-        "outputId": "688c5c2c-392b-4041-a8cc-64ca4d64d47b"
+        }
       },
       "source": [
         "gender_learner.unfreeze()\n",
         "gender_learner.lr_find()"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1811,7 +1773,7 @@
       "source": [
         "gender_learner.recorder.plot()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1842,7 +1804,7 @@
       "source": [
         "gender_learner.fit_one_cycle(3, max_lr = slice(((1e-6) / 2), (1e-6)))"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1931,7 +1893,7 @@
         "gender_interp = fav.ClassificationInterpretation.from_learner(gender_learner)\n",
         "gender_interp.plot_top_losses(12, figsize=(15,11))"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
